--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,10 +6,10 @@
     - name: Update apt cache.
       apt: update_cache=true cache_valid_time=600
       when: ansible_os_family == 'Debian'
-  roles: 
+  roles:
     - role: ned300889.apache
   tasks:
-    - name: "Include php-fpm"
+    - name: "Include php_fpm"
       include_role:
-        name: "php-fpm"
+        name: "php_fpm"
 
